--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "fix-lint": "./node_modules/.bin/eslint src/*/*.ts --fix"
   },
   "dependencies": {
-    "mongodb": "^4.1.2",
-    "@log4js-node/log4js-api": "^1.0.2"
+    "@log4js-node/log4js-api": "^1.0.2",
+    "mongodb": "^4.8.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
-    "@types/mongodb": "^4.0.7",
     "@types/node": "^10.12.2",
     "@types/sinon": "^7.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "@typescript-eslint/experimental-utils": "^4.22.0",
-    "mongo-mock": "^4.1.0",
-    "eslint": "^7.0.0",
-    "mocha": "^7.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/experimental-utils": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-formatter-codeframe": "^7.32.1",
     "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "mongo-mock": "^4.1.0",
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "source-map-support": "^0.5.19",
-    "typescript": "^3.1.6"
+    "typescript": "^4.7.4"
   }
 }
